# hydra_hw_ros

./: .gitmodules  CMakeLists.txt  README.md
config/: IS620N-Ecat_v2.6.7.xml  SV660_EOE_1Axis_V9.12.xml  ethercat_drive_params.yaml  ethercat_drive_params_IS620N.yaml  ethercat_drive_params_SV660N.yaml  fault_codes_SV660N.yaml  hal_402_device_mgr_SV660N.yaml  hal_io.yaml  za_hardware.yaml
halfiles/: ethercat-za6-SV660N.xml
hydra_bringup/: CMakeLists.txt  package.xml
hydra_bringup/config/: ros_controllers.yaml
hydra_bringup/launch/: ros_controllers.launch  za_robot.launch
launch/: hal_hardware.launch
src/za_hal_plumber/: __init__.py
za_bringup/: CMakeLists.txt  package.xml
za_bringup/config/: ros_controllers.yaml
za_bringup/launch/: ros_controllers.launch  za_robot.launch
za_hardware/: package.xml  setup.py
za_hardware/config/: device_fault_code_list.yaml  hal_402_device_mgr_IS620N.yaml  hal_402_device_mgr_sim.yaml  hal_hw_interface.yaml  hal_io.yaml  hardware_settings.yaml  io_config.yaml
za_hardware/halfiles/: ethercat-za6-IS620N.xml  hal_io.py  robot_io_pins.py  setup.py  start_realtime.py
