<?xml version="1.0"?>
<package format="2">
  <name>hydra_bringup</name>
  <version>0.1.0</version>
  <description>GT Hydra system launch files for physical robots</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
