<?xml version="1.0"?>
<package format="2">
  <name>za_bringup</name>
  <version>0.1.0</version>
  <description>Tormach ZA robot launch files for physical robot</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
